--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,16 +8,14 @@
   <string name="image_description">Image Description</string>
   <string name="image_Description">Image Title</string>
   <string name="image_url">Image URL</string>
-  <string name="image_title">Image Title</string>
-  <string name="image_detail_description">Image Detail Description</string>
   <string name="image_id">Image Id</string>
   <string name="image_url2">ImageUrl</string>
   <string name="image_date_time">Image Date Time</string>
-  <string name="gallery_image">Gallery Image</string>
   <string name="image_detail_description">Image Detail Description</string>
   <string name="image_type">Image Type</string>
   <string name="image_width">Image Width</string>
   <string name="image_height">Image Height</string>
   <string name="image_views">Image Views</string>
   <string name="image_bandwidth">Image Bandwidth</string>
+  <string name="close_image_dialog">close</string>
 </resources>
